--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 
-*{
+/* *{
     margin: 0;
     padding: 0;
     font-family: 'Open Sans';
     background-color: white;
-}
+} */
 
-.header{
+/* .header{
     width: 1600px;
     height: 837px;
     background-color: #FFF8F3;
     position: relative;
-}
-.dev-img{
+} */
+/* .dev-img{
     margin-top: 38px;
     margin-bottom: 25px;
     margin-left: 23px;
@@ -22,18 +22,43 @@
     background-color: #FFF8F3;
     font-size: 100px;
     font-weight: 700px;
-}
+} */
 .navbar{
-    position: absolute;
     display: flex;
-    gap: 633px;
-    background-color: #FFF8F3;
+    gap: 633px; 
+    align-items: center;
+    margin-left: 256px;
 
 }
-.buttons{
+.navbar > ul{
     display: flex;
-    gap: 51px;
-    border: 0;
-    background-color: #FFF8F3;
+    align-items: center;
+      
+}
+.navbar>ul li{
+    list-style: none;
+    margin-right: 50px;
+}
+.navbar a{
+    text-decoration: none;
+    font-size: 20px;
     
+}
+.nav-title{
+        font-size: 45px;
+        font-weight: 800px;
+
+}
+.special-text{
+    color: #FD6E0A;
+}
+.btn-primary{
+    background-color: #FD6E0A;
+    border: 0;
+    border-radius: 5px;
+    padding-top: 18px;
+    padding-bottom: 19px;
+    padding-left: 35px;
+    padding-right: 36px;
+    font-size: 20px;
 }
