--- a/style.css
+++ b/style.css
@@ -101,3 +101,43 @@
 /* .b-btn{
     padding-bottom: 184px;
 } */
+
+
+/* Main section style */
+/* About section style */
+
+.about-title{
+    color: var(--Dark-01, #181818);
+        text-align: center;
+        font-size: 35px;
+        font-weight: 700;
+}
+
+.about-des{
+    color: var(--Dark-03, #757575);
+        text-align: center;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
+        /* 166.667% */
+}
+.info-title{
+    color: var(--Dark-03, #757575);
+        text-align: center;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 30px;
+        /* 150% */
+}
+.info{
+    display: flex;
+    gap: 50px;
+}
+.about{
+    width: 1140px;
+    
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px auto;
+}
