--- a/style.css
+++ b/style.css
@@ -106,11 +106,14 @@
 /* Main section style */
 /* About section style */
 
+
+
 .about-title{
     color: var(--Dark-01, #181818);
         text-align: center;
         font-size: 35px;
         font-weight: 700;
+        padding-bottom: 30px;
 }
 
 .about-des{
@@ -119,6 +122,7 @@
         font-size: 18px;
         font-weight: 400;
         line-height: 30px;
+        padding-bottom: 30px;
         /* 166.667% */
 }
 .info-title{
@@ -132,12 +136,15 @@
 .info{
     display: flex;
     gap: 50px;
+    justify-content: center;
 }
 .about{
-    width: 1140px;
-    
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px auto;
+    margin: 130px 0;
+}
+main {
+    max-width: 1140px;
+    margin: 0 auto;
 }
