--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
 /* *{
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans';
-    background-color: white;
+    background-color:var(--White-Color, #FFF);
 } */
 
 
@@ -18,6 +17,9 @@
     font-size: 100px;
     font-weight: 700px;
 } */
+body{
+    background: var(--White-Color, #FFF);
+}
 .navbar{
     display: flex;
     gap: 633px; 
@@ -148,3 +150,50 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
+/* What i do section */
+
+.what-title{
+        color: var(--Dark-01, #181818);
+        text-align: center;
+        font-size: 35px;
+        font-weight: 700;
+        padding-bottom: 30px;
+}
+
+.what-des{
+        color: var(--Dark-03, #757575);
+        text-align: center;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
+        padding-bottom: 50px;
+        /* 166.667% */
+}
+.what-card-title{
+        color: var(--Dark-01, #181818);
+        font-size: 20px;
+        font-weight: 700;
+        padding-top: 30px;
+        padding-bottom: 20px;
+}
+.what-card-des{
+        color: var(--Dark-03, #757575);
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 28px;
+        /* 175% */
+}
+
+.card-container{
+    display: flex;
+    gap: 24px;
+}
+.card{
+    padding: 30px 33px;
+    background-color: #FFF;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* A Summary of resume */
