--- a/style.css
+++ b/style.css
@@ -20,11 +20,12 @@
 body{
     background: var(--White-Color, #FFF);
 }
+
 .navbar{
     display: flex;
     gap: 633px; 
     align-items: center;
-    padding-left: 223px;
+    padding-left: 180px;
 
 }
 .navbar > ul{
@@ -64,15 +65,20 @@ body{
 .header{
    
     background-color: #FFF8F3;
-    background-image: url(images/header_bg.png);
+    background-image: url(images/header_bg.png),url(images/developer.png);
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 
+}
+
+.b-img{
+    width: 584px;
+    height: 676px;
 }
 .banner{
     display: flex;
     align-items: center;
-    padding-left: 230px;
+    padding-left: 180px;
     padding-right: 38px;
     padding-top: 47px;
     padding-bottom: 0;
